@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '3.4.4'
 	id("io.spring.dependency-management") version '1.1.7'
 	id 'groovy'
+    id 'jacoco'
 }
 
 group = 'me.games'
@@ -24,24 +25,42 @@ repositories {
 
 dependencies {
 
+    annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.apache.groovy:groovy:4.0.26'
     implementation 'org.apache.groovy:groovy-xml:4.0.26'
     compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.apache.groovy:groovy:4.0.26'
     testImplementation 'org.apache.groovy:groovy-xml:4.0.26'
     testImplementation 'org.spockframework:spock-core:2.4-M5-groovy-4.0'
     testImplementation 'org.spockframework:spock-spring:2.4-M5-groovy-4.0'
+    testImplementation 'org.mockito:mockito-core:5.17.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
-	testLogging {
-		events "passed", "skipped", "failed", "standardOut", "standardError"
-		outputs.upToDateWhen { false }
-		showStandardStreams = true
-	}
+    useJUnitPlatform()
+}
+
+test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+}
+
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('html')
+    }
 }
